removed unused staticfiles calls

--- a/templates/svc/form.html
+++ b/templates/svc/form.html
@@ -12,32 +12,32 @@
 <input type="hidden" name="id" value="1">
 <ol id="test-list">
   <li id="li_1">
-    <img src="{{ STATIC_URL}}img/arrow.png" class="handle" alt="move" />
+    <img src="img/arrow.png" class="handle" alt="move" />
     No interest rate increases on an existing balance unless the cardholder has missed two consecutive payments.    
 	<input type="text" name="item_1" value="1" size="2">
   </li>
   <li id="li_2">
-    <img src="{{ STATIC_URL}}img/arrow.png" class="handle" alt="move" />
+    <img src="img/arrow.png" class="handle" alt="move" />
     Payments are applied in consumer-friendly manner, reducing highest-rate balances first.
     <input type="text" name="item_2" value="2" size="2">
   </li>
   <li id="li_3">
-    <img src="{{ STATIC_URL}}img/arrow.png" class="handle" alt="move" />
+    <img src="img/arrow.png" class="handle" alt="move" />
     Monthly statements lists both the date when bill would be paid off if only minimum payments made, and the amount that should be paid in order to fully pay off the bill within three years.
     <input type="text" name="item_3" value="3" size="2">
   </li>
   <li id="li_4">
-    <img src="{{ STATIC_URL}}img/arrow.png" class="handle" alt="move" />
+    <img src="img/arrow.png" class="handle" alt="move" />
     Overlimit fees eliminated unless consumers opt in to special program.
     <input type="text" name="item_4" value="4" size="2">
   </li>
   <li id="li_5">
-    <img src="{{ STATIC_URL}}img/arrow.png" class="handle" alt="move" />
+    <img src="img/arrow.png" class="handle" alt="move" />
     Due dates standardized so consumers not tricked into late payments.
     <input type="text" name="item_5" value="5" size="2">
   </li>
   <li id="li_6">
-    <img src="{{ STATIC_URL}}img/arrow.png" class="handle" alt="move" />
+    <img src="img/arrow.png" class="handle" alt="move" />
     No changes the APR rate without notice 45 days in advance.
     <input type="text" name="item_6" value="6" size="2">
   </li>
