fixed test form, removed debugging code

--- a/templates/svc/form.html
+++ b/templates/svc/form.html
@@ -8,7 +8,7 @@
 <p>Aliquam molestie leo sed turpis iaculis luctus. Nulla suscipit justo cursus turpis euismod gravida. Curabitur malesuada porttitor justo ut consequat. Pellentesque sed luctus nisl. Morbi consectetur ornare tempor. Ut fringilla, risus in congue scelerisque, ipsum sem dapibus dui, vitae bibendum massa magna sed massa. Integer eget egestas metus. Vivamus fermentum egestas nisl quis porttitor. Maecenas ac justo non augue bibendum venenatis. Suspendisse vel auctor metus. Mauris malesuada lobortis pulvinar. Etiam id dui non urna cursus iaculis. Suspendisse potenti. Suspendisse aliquet risus sit amet leo ultrices adipiscing. Nam posuere, neque in ultricies consectetur, nibh nibh facilisis arcu, eu fermentum justo leo vel erat. Integer vulputate, tortor a congue gravida, est felis vulputate lacus, eget vehicula lacus enim ut turpis. Nulla id mauris nec elit sagittis lacinia.</p>
 </body>
 <div id="getRanking">
-<form action="../submit/" method="post">{% csrf_token %}
+<form action="./submit/" method="post">{% csrf_token %}
 <input type="hidden" name="id" value="1">
 <ol id="test-list">
   <li id="li_1">
